--- a/src/main/resources/static/SP-IMS.css
+++ b/src/main/resources/static/SP-IMS.css
@@ -9,14 +9,16 @@ html {
 }
 
 body {
+  background-color: gray;
+  padding-bottom: 10px;
   display: flex;
   justify-content: center;
 }
 
 .content {
-  padding-top: 30px;
   height: auto;
-  width: 800px;
+  width: 62vw;
+  min-width: 800px;
 }
 
 .btn {
@@ -77,13 +79,11 @@ select,
 }
 
 .result-content {
-  width: 800px;
-  height: 600px;
-  box-shadow: 0 0 2px 2px rgb(195, 195, 195);
+  width: 100%;
+  height: auto;
   border: solid 2px gray;
   border-radius: 8px;
   margin-top: 10px;
-  margin-bottom: 30px;
   display: flex;
   flex-direction: column;
   align-items: center;
